# dns

.github/workflows/: CI-CD-dns-explorer.yml  CI-CD-dns-indexer.yml
api/: Dockerfile  package-lock.json  package.json
api/src/: app.module.ts  main.ts
api/src/dns/: dns.controller.ts  dns.module.ts  dns.service.ts
api/src/dns/types/: dns.response.ts  program-all.request.ts  program.response.ts  programs.response.ts
api/src/entities/: dns.entity.ts  program.entity.ts
contract/: Cargo.toml
contract/app/: Cargo.toml
contract/app/src/: lib.rs
contract/app/src/service/: funcs.rs  mod.rs  utils.rs
contract/app/tests/: test.rs
contract/wasm/: .binpath  Cargo.toml  build.rs  dns.idl
contract/wasm/src/: lib.rs
indexer/: .env.example  Dockerfile-explorer  Dockerfile-indexer  package-lock.json  package.json  schema.graphql  squid.yaml
indexer/assets/: README.MD  dns.idl
indexer/db/migrations/: 1718105861573-Data.js  1719216583013-Data.js  1720082882630-Data.js
indexer/scripts/: sub-client.js
indexer/src/: config.ts  consts.ts  main.ts  processor.ts
indexer/src/dns-types/: lib.ts
indexer/src/processing/: batch.service.ts  entities.service.ts  events.processing.ts
indexer/src/processing/dns/: admin-added.handler.ts  admin-deleted.handler.ts  admin-removed.handler.ts  dns.handler.ts  program-added.handler.ts  program-deleted.handler.ts  program-id-changed.handler.ts
indexer/src/processing/storage/: local.storage.ts  storage.inteface.ts
indexer/src/types/: dns.events.ts
