[workspace]
resolver = "2"

members = [
    "app", "wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
gstd = "1.1.1"
gtest = "1.1.1"
gwasm-builder = { package = "gear-wasm-builder", version = "1.1.1" }
sails-idl-gen = { git = "https://github.com/gear-tech/sails", rev = "51b731ef8f064a23c6c98fa92d06eeafe44d3f9d" }
sails-rtl = { git = "https://github.com/gear-tech/sails", rev = "51b731ef8f064a23c6c98fa92d06eeafe44d3f9d" }
scale-info = { version = "2.10", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false }
primitive-types = { version = "*", default-features = false }

