[workspace]
resolver = "2"

members = [
    "app", "wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
gstd = "1.5.0"
gtest = "1.5.0"
gear-wasm-builder = "1.5.0"
sails-idl-gen = "0.3.0"
sails-rs = "0.3.0"
scale-info = { version = "2.10", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false }
primitive-types = { version = "*", default-features = false }

