[package]
name = "dns"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
sails-rs.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
chrono-light = { version = "0.1.5", default-features = false }

[build-dependencies]
gwasm-builder.workspace = true

[dev-dependencies]
gtest.workspace = true
